--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^1.0.0",
     "@tailwindcss/typography": "^0.5.4",
+    "accessible-astro-components": "^1.6.5",
     "astro": "^1.0.8",
     "autoprefixer": "^10.4.8",
     "daisyui": "^2.24.0",
     "prettier-plugin-astro": "^0.5.3"
   },
   "dependencies": {
-    "astro-icon": "^0.7.3",
+    "@astropub/md": "^0.1.5",
+    "astro-icon": "^0.8.0",
     "urlencode": "^1.1.0"
   }
 }
